--- a/html/index.html
+++ b/html/index.html
@@ -12,19 +12,22 @@
     <link href="./lib/iview/iview.css" rel="stylesheet" />
     <link href="./css/index.css" rel="stylesheet" />
     <link href="./css/font-awesome.min.css" rel="stylesheet" />
-    <script src="./lib/vue/vue.min.js"></script>
-    <script src="./lib/vue/vue-router.min.js"></script>
-    <script src="./lib/vue/vue-resource.min.js"></script>
-    <script src="./lib/iview/iview.min.js"></script>
-    <script src="./lib/base64/base64.min.js"></script>
 
 </head>
 <body>
 <div id="app">
-    <div id="uiHeader">
-        <i-button @click="iMusic.closeForm()">
-            <i class="fa fa-close" style="font-size: 14px;"></i>
-        </i-button>
+    <div id="uiHeader" onmousedown="if(event.button !== 2){ iMusic.dragEnable() }" onmouseup="iMusic.dragDisable()">
+        <div id="ui-sys-commands">
+            <span id="minimize" onclick="iMusic.minForm();" onmousedown="event.stopPropagation()">
+                <i class="ivu-icon ivu-icon-minus-round"></i>
+            </span>
+            <span id="maximize" onclick="iMusic.maxForm()" onmousedown="event.stopPropagation()">
+                <i class="fa fa-square-o"></i>
+            </span>
+            <span id="close" onclick="iMusic.closeForm()" onmousedown="event.stopPropagation()">
+                <i class="ivu-icon ivu-icon-close-round"></i>
+            </span>
+        </div>
     </div>
     <i-menu theme="light" id="navLeft">
         <Menu-group title="推荐">
@@ -86,18 +89,102 @@
         </Submenu>
     </i-menu>
 
-    <div id="uiTime"></div>
-    <div id="uiFooter"></div>
+    <div id="jp_container">
+        <div id="uiTime" class="jp-progress">
+            <div class="jp-seek-bar">
+                <div class="jp-play-bar"></div>
+            </div>
+        </div>
+        <div id="uiFooter">
+            <div class="play-info" style="float: left;">
+                <div style="display: inline-block">
+                    <img style="width: 65px;height: 65px;" src="http://p4.music.126.net/_XoSrxY3z6TOA7EecH2Wcw==/18510278255510126.jpg"/>
+                </div>
+                <div style="display: inline-block;height: 65px;vertical-align: top;padding-left: 10px;">
+                    <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+                    <div style="font-size: 14px;color: #3E3E3E;line-height: 25px;">爱你的自由</div>
+                    <div style="font-size: 14px;color: #3E3E3E;line-height: 25px;">颜子超级童颜</div>
+                </div>
+            </div>
+
+            <div class="player-controls">
+                <a class="jp-previous">
+                    <i class="ivu-icon ivu-icon-ios-skipbackward"></i>
+                </a>
+                <a class="jp-play">
+                    <i class="ivu-icon ivu-icon-ios-play"></i>
+                </a>
+                <a class="jp-pause">
+                    <i class="ivu-icon ivu-icon-ios-pause"></i>
+                </a>
+                <a class="jp-next">
+                    <i class="ivu-icon ivu-icon-ios-skipforward"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="jquery_jplayer"></div>
 </div>
-    
+
+<script src="./lib/jplayer/jquery-1.9.1.min.js"></script>
+<script src="./lib/jplayer/jquery.jplayer.min.js"></script>
+<script src="./lib/jplayer/jplayer.playlist.min.js"></script>
+<script src="./lib/vue/vue.min.js"></script>
+<script src="./lib/vue/vue-router.min.js"></script>
+<script src="./lib/vue/vue-resource.min.js"></script>
+<script src="./lib/iview/iview.min.js"></script>
+<script src="./lib/base64/base64.min.js"></script>
 
 <script>
+    var myPlaylist;
+    $(document).ready(function() {
+        myPlaylist = new jPlayerPlaylist({
+            jPlayer: "#jquery_jplayer",
+            cssSelectorAncestor: "#jp_container"
+        }, [], {
+            ready: function () {
+                $(this).jPlayer("setMedia", {
+                    title: "爱你的自由",
+                    artist: "颜子超级童颜",
+                    mp3: "http://vip.itwusun.com/music/ymusic/wy_320_473964639.mp3?sign=2cc216728dee58b6c1c985c48785fb8b",
+                    poster: "http://p4.music.126.net/_XoSrxY3z6TOA7EecH2Wcw==/18510278255510126.jpg",
+                    lrc: "http://vip.itwusun.com/music/ymusic/wy_320_473964639.lrc?sign=e535d654c4b4c3cd7090b3f74f613261"
+                });
+            },
+            solution: "html",
+            preload: "auto",
+            supplied: "mp3,m4a,oga,wav",
+            useStateClassSkin: true,
+            autoBlur: false,
+            smoothPlayBar: true,
+            keyEnabled: true,
+            remainingDuration: true
+        });
+    });
+
+
     new Vue({
         el: "#app",
         data: {
 
         }
     });
+
+
+
+    function LoadPlayList() {
+        var data = [];
+        $(data).each(function (index) {
+            var song = data[index];
+            myPlaylist.add({
+                title: song["SongName"],
+                artist: song["SongArtist"],
+                mp3: song["SongUrl"]
+            });
+        });
+    }
+
 </script>
 </body>
 </html>
