完成左侧导航栏的开发

--- a/html/home.html
+++ b/html/home.html
@@ -138,32 +138,29 @@
     </div>
 
     <i-menu theme="light" id="navLeft">
-        <Menu-group title="推荐">
+        <Menu-group title="发现音乐">
             <Menu-item name="mFind">
-                <i class="fa fa-modx" style="font-size: 15px;"></i>发现音乐
+                <i class="fa fa-calendar"></i>今日推荐
             </Menu-item>
             <Menu-item name="mFM">
-                <Icon type="radio-waves"></Icon>私人FM
-            </Menu-item>
-            <Menu-item name="mPlay">
-                <i class="ivu-icon ivu-icon-social-youtube-outline"></i>正在播放
-            </Menu-item>
-            <Menu-item name="mFirend">
-                <Icon type="person-stalker"></Icon>朋友
+                <i class="fa fa-rss"></i></Icon>鱼声精选
             </Menu-item>
         </Menu-group>
         <Menu-group title="我的音乐">
+            <Menu-item name="mPlay">
+                <i class="fa fa-play"></i>正在播放
+            </Menu-item>
+            <Menu-item name="mHistory">
+                <i class="fa fa-history" style="font-size: 17px;"></i>最近播放
+            </Menu-item>
+            <Menu-item name="mFav">
+                <i class="fa fa-heart-o" style="font-weight: 800;"></i>我的收藏
+            </Menu-item>
             <Menu-item name="mLocal">
-                <i class="fa fa-music"></i>本地音乐
+                <i class="fa fa-desktop"></i>本地音乐
             </Menu-item>
             <Menu-item name="mDown">
                 <i class="fa fa-download"></i>下载管理
-            </Menu-item>
-            <Menu-item name="mArtist">
-                <i class="fa fa-user-md"></i>我的歌手
-            </Menu-item>
-            <Menu-item name="mRadio">
-                <i class="fa fa-podcast"></i>我的电台
             </Menu-item>
         </Menu-group>
         <Submenu name="3" class="playlist">
@@ -171,28 +168,28 @@
                 播放列表
             </template>
             <Menu-item name="3-1">
-                <i class="fa fa-file-audio-o"></i>播放列表1
+                <i class="fa fa-music"></i>播放列表1
             </Menu-item>
             <Menu-item name="3-2">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-3">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-4">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-5">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-6">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-7">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
             <Menu-item name="3-8">
-                <i class="fa fa-file-audio-o"></i>播放列表2
+                <i class="fa fa-music"></i>播放列表2
             </Menu-item>
         </Submenu>
     </i-menu>
