--- a/html/home.html
+++ b/html/home.html
@@ -200,9 +200,9 @@
     <div id="jquery_jplayer"></div>
 
 </div>
-<script src="./lib/jplayer/jquery-1.9.1.min.js"></script>
-<script src="./lib/jplayer/jquery.jplayer.min.js"></script>
-<script src="./lib/jplayer/jplayer.playlist.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
+<script src="https://cdn.bootcss.com/jplayer/2.9.2/add-on/jplayer.playlist.min.js"></script>
 <script src="./lib/vue/vue.min.js"></script>
 <script src="./lib/vue/vue-router.min.js"></script>
 <script src="./lib/vue/vue-resource.min.js"></script>
