添加播放栏控制按钮

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link href="./lib/iview/iview.css" rel="stylesheet" />
     <link href="./css/home.css" rel="stylesheet" />
     <link href="./css/font-awesome.min.css" rel="stylesheet" />
+    <link href="./lib/iconfont/iconfont.css" rel="stylesheet" />
 
     <script>
         const isMouseEnter = false;
